# FastTextClassification

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt  run.py  run_multi_label.py  run_shallow.py
docker/inference/v0.1/: Dockerfile  build-docker.sh  run-docker-worker.sh  start_services.sh
docker/inference/v0.2/: Dockerfile  build-docker.sh  run-docker-worker-cpu.sh  run-docker-worker.sh  start_services.sh
docs/: readme_en.md
examples/hparamsConfig/: bert.yaml  ernie.yaml
inference/: infer.sh
scripts/: build-env-121.sh  conver_data.sh  transfer-csv-to-data.py
src/: train_bash.py  utils.py
src/data/: common.py  convert_csv_data.py  convert_raw_to_json.py  transformer_loader.py  utils_multi.py
src/extras/: callbacks.py  common.py  constants.py  loggings.py  misc.py  packages.py  ploting.py
src/hparams/: data_args.py  load_args.py  model_args.py  parser.py  training_args.py
src/models/: ernie.py
src/models/component/: LSTM.py  common.py  modeling_ernie.py  utils.py
src/server/: app.py  gunicorn_conf.py  server_utils.py
src/tools/: train_eval.py  utils.py  utils_fasttext.py
src/train/: trainer.py  trainer_utils.py  training_types.py  workflow.py
tests/: test_cuda.py  test_data.py  test_kan.py  test_load_dataset.py  test_multi_label.py
