[tool.poetry]
name = "fasttextclassification"
version = "0.1.0"
description = ""
authors = ["AmbroseX <rongkangxiong@idea.edu.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "4.39.1"
tiktoken = "^0.6.0"
einops = "^0.8.0"
transformers-stream-generator = "0.0.5"
torchtext = "^0.18.0"
scikit-learn = "^1.4.2"
tensorboardx = "^2.6.2.2"
nltk = "^3.8.1"
numpy = "^1.26.4"
pandas = "^2.2.2"
sentencepiece = "^0.2.0"
scipy = "^1.13.0"
protobuf = "^5.26.1"
jieba = "^0.42.1"
rouge-chinese = "^1.0.3"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
fastapi = "^0.110.3"
sse-starlette = "^2.1.0"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
